--- a/pyFlashCards.ui
+++ b/pyFlashCards.ui
@@ -31,7 +31,7 @@
         <string>Add</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_4">
-        <item row="0" column="0">
+        <item row="1" column="0">
          <layout class="QGridLayout" name="gridLayout_3">
           <property name="leftMargin">
            <number>10</number>
@@ -45,7 +45,17 @@
           <property name="bottomMargin">
            <number>10</number>
           </property>
-          <item row="3" column="0" colspan="5">
+          <item row="3" column="2" colspan="7">
+           <widget class="QTableView" name="tableView_words_overview">
+            <property name="minimumSize">
+             <size>
+              <width>600</width>
+              <height>200</height>
+             </size>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="0" colspan="9">
            <layout class="QGridLayout" name="gridLayout_2">
             <property name="leftMargin">
              <number>5</number>
@@ -102,30 +112,7 @@
             </item>
            </layout>
           </item>
-          <item row="2" column="0" colspan="5">
-           <widget class="QTableView" name="tableView_words_overview">
-            <property name="minimumSize">
-             <size>
-              <width>0</width>
-              <height>200</height>
-             </size>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="0" rowspan="2">
-           <widget class="QPushButton" name="pushButton_createNewSet">
-            <property name="maximumSize">
-             <size>
-              <width>150</width>
-              <height>16777215</height>
-             </size>
-            </property>
-            <property name="text">
-             <string>Create New Set</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="1" rowspan="2">
+          <item row="1" column="1">
            <widget class="QPushButton" name="pushButton_selectPath">
             <property name="maximumSize">
              <size>
@@ -138,7 +125,44 @@
             </property>
            </widget>
           </item>
-          <item row="0" column="2" rowspan="2" colspan="3">
+          <item row="3" column="0" colspan="2">
+           <widget class="QTableView" name="tableView_studyset">
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>16777215</height>
+             </size>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="8">
+           <widget class="QPushButton" name="pushButton_removeWord">
+            <property name="text">
+             <string>Remove</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0" rowspan="2">
+           <widget class="QPushButton" name="pushButton_createNewSet">
+            <property name="maximumSize">
+             <size>
+              <width>150</width>
+              <height>16777215</height>
+             </size>
+            </property>
+            <property name="text">
+             <string>Create New Set</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="7">
+           <widget class="QPushButton" name="pushButton_editWord">
+            <property name="text">
+             <string>Edit</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="2" colspan="3">
            <widget class="QLabel" name="label_path">
             <property name="text">
              <string>TextLabel</string>
@@ -361,6 +385,12 @@
          <layout class="QGridLayout" name="gridLayout">
           <item row="1" column="3">
            <widget class="QLabel" name="label_B">
+            <property name="minimumSize">
+             <size>
+              <width>400</width>
+              <height>0</height>
+             </size>
+            </property>
             <property name="text">
              <string>TextLabel</string>
             </property>
@@ -425,6 +455,12 @@
           </item>
           <item row="2" column="1">
            <widget class="QLabel" name="label_C">
+            <property name="minimumSize">
+             <size>
+              <width>400</width>
+              <height>0</height>
+             </size>
+            </property>
             <property name="text">
              <string>TextLabel</string>
             </property>
@@ -432,6 +468,12 @@
           </item>
           <item row="2" column="3">
            <widget class="QLabel" name="label_D">
+            <property name="minimumSize">
+             <size>
+              <width>400</width>
+              <height>0</height>
+             </size>
+            </property>
             <property name="text">
              <string>TextLabel</string>
             </property>
@@ -496,6 +538,18 @@
           </item>
           <item row="1" column="1">
            <widget class="QLabel" name="label_A">
+            <property name="minimumSize">
+             <size>
+              <width>400</width>
+              <height>0</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>200</height>
+             </size>
+            </property>
             <property name="text">
              <string>TextLabel</string>
             </property>
@@ -505,6 +559,12 @@
         </item>
         <item row="1" column="0" colspan="2">
          <widget class="QLabel" name="label_test_quiz">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>200</height>
+           </size>
+          </property>
           <property name="maximumSize">
            <size>
             <width>16777215</width>
@@ -520,6 +580,32 @@
            <string>---</string>
           </property>
          </widget>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QWidget" name="tab">
+       <attribute name="title">
+        <string>Score</string>
+       </attribute>
+       <layout class="QGridLayout" name="gridLayout_8">
+        <item row="1" column="1">
+         <widget class="QWidget" name="widget_lineplot" native="true"/>
+        </item>
+        <item row="1" column="0">
+         <widget class="QWidget" name="widget_piPlot" native="true">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>300</height>
+           </size>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <widget class="QComboBox" name="comboBox_studyset"/>
+        </item>
+        <item row="2" column="0" colspan="2">
+         <widget class="QTableView" name="tableView_scoreOverview"/>
         </item>
        </layout>
       </widget>
